force-app/main/default/objects/sfpegCardList__mdt/sfpegCardList__mdt.object-meta.xml
<CustomObject>
    <description>Configuration of the sfpegCardListCmp component, both in terms of records and layouts to be displayed in a list.</description>
    <label>sfpegCardList</label>
    <pluralLabel>sfpegCardLists</pluralLabel>
</CustomObject>