force-app/main/default/objects/sfpegCardList__mdt/fields/CardActions__c.field-meta.xml
<CustomField>
    <fullName>CardActions__c</fullName>
    <description>Name of the Action metadata record used for each card header actions.</description>
    <label>Card Actions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>