force-app/main/default/objects/sfpegCardList__mdt/fields/CardConfig__c.field-meta.xml
<CustomField>
    <fullName>CardConfig__c</fullName>
    <description>Name of the sfpecCard metadata record to be used to display the records.</description>
    <label>Card Config</label>
    <length>100</length>
    <type>Text</type>
</CustomField>