force-app/main/default/objects/sfpegCardList__mdt/fields/CardConfigField__c.field-meta.xml
<CustomField>
    <fullName>CardConfigField__c</fullName>
    <description>Name of the field to be used to determine the card configuration to apply for each record (CardConfig value being applied by default)</description>
    <label>Card Config Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>