force-app/main/default/objects/sfpegCardList__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short Description of the configuration record and its use cases (for documentation)</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>