force-app/main/default/objects/sfpegCardList__mdt/fields/IconNameField__c.field-meta.xml
<CustomField>
    <fullName>IconNameField__c</fullName>
    <description>API of the record field providing the Name of the icon (from SLDS) to be displayed on each record card header</description>
    <label>Icon Name Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>