force-app/main/default/objects/sfpegCardList__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>Object API Name of the records being displayed in the cards.</description>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>