force-app/main/default/objects/sfpegCardList__mdt/fields/ObjectNameField__c.field-meta.xml
<CustomField>
    <fullName>ObjectNameField__c</fullName>
    <description>Name of the field in the query results to be used to determine the Object Api Name of each record displayed in cards (Object Name being applied by default).</description>
    <label>Object Name Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>