force-app/main/default/objects/sfpegCardList__mdt/fields/RecordIdField__c.field-meta.xml
<CustomField>
    <fullName>RecordIdField__c</fullName>
    <defaultValue>&quot;Id&quot;</defaultValue>
    <description>Name of the query result field to be used to identify the records displayed in cards.</description>
    <label>Record ID Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>