force-app/main/default/objects/sfpegCardList__mdt/fields/RecordNameField__c.field-meta.xml
<CustomField>
    <fullName>RecordNameField__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <description>API Name of the field in the query result containing the Name of each record displayed in the card list.</description>
    <label>Record Name Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>